@@ -301,7 +301,7 @@
       <component name="eel" dir="eel" group="desktop">
         <podir dir="po"/>
         <potname name="eel-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-2"/>
         <regenerate/>
         <download/>
       </component>
@@ -994,7 +994,7 @@
       <component name="gnome-icon-theme" dir="gnome-icon-theme" group="desktop">
 	<podir dir="po"/>
 	<potname name="gnome-icon-theme.pot"/>
-	<branch name="HEAD"/>
+	<branch name="gnome-2-2"/>
 	<regenerate/>
 	<download/>
       </component>
@@ -1281,7 +1281,7 @@
       <component name="gnome-vfs" dir="gnome-vfs" group="developer-libs">
         <podir dir="po"/>
         <potname name="gnome-vfs-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-2"/>
         <regenerate/>
         <download/>
       </component>
@@ -1946,7 +1946,7 @@
       <component name="nautilus" dir="nautilus" group="desktop">
         <podir dir="po"/>
         <potname name="nautilus.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-2"/>
         <regenerate/>
         <download/>
       </component>
