@@ -1,5 +1,10 @@
 2003-03-31  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Fixed branch for gnome-icon-theme,
+	gnome-vfs, eel, and nautilus.
+
+2003-03-31  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: Fixed branch for yelp.
 
 2003-03-30  Christian Rose  <menthos@menthos.com>
